--- a/Others/Stock/index.html
+++ b/Others/Stock/index.html
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="performance">
-                                <div class="performance-label">Performance du jour</div>
+                                <div class="performance-label">Performance sur <span class="performance-period">1D</span></div>
                                 <div class="performance-value" id=""></div>
                             </div>
                             <div class="info-grid">
