--- a/Others/Stock/index.html
+++ b/Others/Stock/index.html
@@ -217,6 +217,7 @@
                                     <span>Graphique</span>
                                     <div class="chart-controls">
                                         <button class="chart-type-btn active" data-type="line" title="Ligne"><i class="fa-solid fa-chart-line"></i></button>
+                                        <button class="chart-type-btn" data-type="baseline" title="Baseline"><i class="fa-solid fa-chart-area"></i></button>
                                         <button class="chart-type-btn" data-type="candle" title="Bougies"><i class="fa-solid fa-chart-simple"></i></button>
                                     </div>
                                 </div>
