--- a/YnovTeamRes/TP/TP2/index.html
+++ b/YnovTeamRes/TP/TP2/index.html
@@ -23,19 +23,29 @@
         <div class="content-wrapper">
             <header class="mt-3 mb-2">
               <div class="d-flex align-items-center">
-                <div class="d-flex gap-2 ms-auto">
-                  <button id="importBtn" class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-file-import"></i> Importer JSON</button>
-                  <button id="exportBtn" class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-file-export"></i> Exporter JSON</button>
-                  <button id="clearBtn" class="btn btn-outline-danger btn-sm"><i class="fa-solid fa-trash"></i> Réinitialiser</button>
-                </div>
+                  <div class="d-flex gap-2 ms-auto align-items-center">
+                        <div id="viewModeGroup" class="btn-group btn-group-sm me-2" role="group" aria-label="Mode de vue">
+                          <button id="viewBtnKanban" type="button" class="btn btn-outline-secondary" title="Kanban"><i class="fa-solid fa-columns"></i></button>
+                          <button id="viewBtnList" type="button" class="btn btn-outline-secondary" title="Liste"><i class="fa-solid fa-list"></i></button>
+                          <button id="viewBtnGantt" type="button" class="btn btn-outline-secondary" title="Gantt"><i class="fa-solid fa-chart-gantt"></i></button>
+                        </div>
+                        <button id="signupBtn" class="btn btn-outline-primary btn-sm"><i class="fa-solid fa-user-plus"></i> Créer un compte</button>
+                        <button id="loginBtn" class="btn btn-outline-primary btn-sm"><i class="fa-solid fa-sign-in-alt"></i> Se connecter</button>
+                  </div>
               </div>
             </header>
 
             <main class="mt-3">
               <section id="mainContent" class="flex-fill">
-                <div class="d-flex align-items-center mb-2">
-                  <h4 id="selectedPoleName" class="me-auto">Sélectionnez un pôle</h4>
-                  <small id="selectedCount" class="text-muted"></small>
+                <div class="mb-1">
+                  <div class="d-flex align-items-center">
+                    <h4 id="selectedPoleName" class="me-auto">Sélectionnez un pôle</h4>
+                    <small id="selectedCount" class="text-muted"></small>
+                  </div>
+                  <div id="sub-poles-nav" class="sub-poles-nav mt-2 d-flex align-items-center gap-2">
+                    <!-- Subpart tabs will be rendered here -->
+                    <button id="addSubpartBtn" class="btn btn-sm btn-outline-secondary" style="display: none;"><i class="fa-solid fa-plus"></i> Ajouter une sous-partie</button>
+                  </div>
                 </div>
                 <div id="lists" class="lists d-flex gap-3">
                   <!-- Status columns: TODO -> DOING -> DONE -->
@@ -47,11 +57,17 @@
                     <div class="list-header">En cours</div>
                     <div class="list-body" id="doing-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
                   </div>
+                  <div class="list-col" data-status="verify">
+                    <div class="list-header">À vérifier</div>
+                    <div class="list-body" id="verify-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
+                  </div>
                   <div class="list-col" data-status="done">
                     <div class="list-header">Terminé</div>
                     <div class="list-body" id="done-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
                   </div>
                 </div>
+                <!-- Footer area for List/Gantt view actions (e.g., add button) -->
+                <div id="viewFooter" class="view-footer"></div>
               </section>
             </main>
         </div>
@@ -64,7 +80,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modalTitle">Ajouter une ressource</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div id="task-modal-actions" class="ms-auto d-flex align-items-center" style="display: none;"></div>
+                    <button id="task-modal-close-btn" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form id="taskForm" class="modal-body futuristic-form" novalidate>
                     <div class="form-group">
@@ -76,20 +93,34 @@
                         <textarea id="taskDesc" class="form-control" rows="3" placeholder="Résumé ou notes..."></textarea>
                     </div>
                     <div class="form-group">
+                        <label for="taskImageInput" class="form-label">Image</label>
+                        <div class="image-chooser">
+                            <label for="taskImageInput" class="image-chooser-inner">
+                                <span class="plus-icon">+</span>
+                                <span class="image-chooser-text">Ajouter une/des images</span>
+                            </label>
+                            <input id="taskImageInput" type="file" class="form-control" accept="image/*" multiple />
+                            <div id="taskImagePreview" class="mt-2 gallery"></div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Attachement de fichiers</label>
+                        <div class="d-flex">
+                            <label class="file-chooser btn" for="taskFilesInput"><i class="fa-solid fa-file-arrow-up"></i> Choisir</label>
+                            <div id="taskFilesList" class="small text-muted ms-3"></div>
+                        </div>
+                        <input id="taskFilesInput" type="file" class="form-control d-none" multiple />
+                    </div>
+                    <div class="form-group">
                         <label class="form-label">Assignés</label>
                         <div id="taskAssigneesContainer" class="assignees-container">
                             <!-- Assignee list will be populated by JavaScript -->
                         </div>
                     </div>
+                    <!-- Sub-pole selection removed from task modal -->
                     <div class="form-group">
                         <label for="taskDueDate" class="form-label">Date limite</label>
                         <input id="taskDueDate" type="date" class="form-control" />
-                    </div>
-                    <div class="form-group form-group-inline">
-                        <label class="form-label">Fichiers</label>
-                        <label class="file-chooser btn" for="taskFilesInput"><i class="fa-solid fa-file-arrow-up"></i> Choisir</label>
-                        <div id="taskFilesList" class="small text-muted"></div>
-                        <input id="taskFilesInput" type="file" class="form-control d-none" multiple />
                     </div>
                 </form>
                 <div class="modal-footer">
@@ -110,23 +141,33 @@
               <small id="viewList" class="small text-muted d-block">&nbsp;</small>
             </div>
             <div class="ms-auto d-flex align-items-center">
-                <div class="dropdown">
-                  <button class="btn btn-sm btn-icon" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" id="taskEdit" href="#">Modifier</a></li>
-                    <li><a class="dropdown-item text-danger" id="taskDelete" href="#">Supprimer</a></li>
-                  </ul>
-                </div>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button id="taskEdit" class="btn btn-sm btn-icon" type="button" aria-label="Modifier">
+                    <i class="fa-solid fa-pencil"></i>
+                </button>
+                <button id="taskDelete" class="btn btn-sm btn-icon btn-icon-danger" type="button" aria-label="Supprimer">
+                    <i class="fa-solid fa-trash"></i>
+                </button>
             </div>
           </div>
           <div class="modal-body">
+            <!-- Dates: post date, due date -->
             <div id="viewList" class="small text-muted mb-1"></div>
-            <div id="viewAssignees" class="mb-2"></div>
-            <p id="viewDesc" class="mb-0 mb-2"></p>
             <div class="small text-muted mb-2" id="viewDueDate"></div>
+            <!-- Assigned people -->
+            <div id="viewAssignees" class="mb-2"></div>
+            <!-- Description -->
+            <p id="viewDesc" class="mb-0 mb-2"></p>
+            <!-- Images -->
+            <div id="viewImageCarousel" class="carousel-container" style="display: none;">
+              <div class="carousel-image-wrapper">
+                <img id="carouselImage" src="" class="img-fluid mb-2">
+              </div>
+              <button id="prevImage" class="carousel-control prev"><i class="fa-solid fa-chevron-left"></i></button>
+              <button id="nextImage" class="carousel-control next"><i class="fa-solid fa-chevron-right"></i></button>
+              <div id="imageCounter" class="carousel-counter"></div>
+            </div>
+            <div id="viewImagePreview" class="mb-3"></div>
+            <!-- Attached files -->
             <div id="viewFiles" class="mb-1"></div>
           </div>
           <div class="modal-footer">
@@ -135,6 +176,166 @@
         </div>
       </div>
     </div>
+
+    <!-- Delete confirmation modal -->
+    <div class="modal" id="deleteConfirmModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirmation</h5>
+          </div>
+          <div class="modal-body">
+            <p>Êtes-vous sûr de vouloir supprimer cette ressource ?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button id="confirmDeleteBtn" type="button" class="btn btn-danger">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delete confirmation modal -->
+    <div class="modal" id="deleteConfirmModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirmation</h5>
+          </div>
+          <div class="modal-body">
+            <p>Êtes-vous sûr de vouloir supprimer cette ressource ?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button id="confirmDeleteBtn" type="button" class="btn btn-danger">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Add Subpart Modal -->
+    <div class="modal futuristic-modal" id="addSubpartModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ajouter une sous-partie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form id="addSubpartForm" class="modal-body futuristic-form">
+            <div class="form-group">
+              <label for="newSubpartName" class="form-label">Nom de la sous-partie</label>
+              <input type="text" class="form-control" id="newSubpartName" placeholder="Nom de la sous-partie" required>
+            </div>
+          </form>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button type="button" class="btn btn-primary" id="saveNewSubpartBtn">Ajouter</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Edit Subpart Modal -->
+    <div class="modal futuristic-modal" id="editSubpartModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modifier la sous-partie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form id="editSubpartForm" class="modal-body futuristic-form">
+            <div class="form-group">
+              <label for="editSubpartName" class="form-label">Nom de la sous-partie</label>
+              <input type="text" class="form-control" id="editSubpartName" placeholder="Nom de la sous-partie" required>
+            </div>
+            <input type="hidden" id="editSubpartId">
+          </form>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button type="button" class="btn btn-primary" id="saveEditedSubpartBtn">Enregistrer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delete Subpart Confirmation Modal -->
+    <div class="modal" id="deleteSubpartConfirmModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirmer la suppression de la sous-partie</h5>
+          </div>
+          <div class="modal-body">
+            <p>Êtes-vous sûr de vouloir supprimer cette sous-partie ? Toutes les tâches qu'elle contient seront également supprimées.</p>
+            <input type="hidden" id="deleteSubpartId">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button id="confirmDeleteSubpartBtn" type="button" class="btn btn-danger">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="modal futuristic-modal" id="loginModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="row g-0">
+              <div class="col-lg-6 d-none d-lg-flex align-items: center justify-content-center">
+                <img src="image/preview.png" alt="Preview" class="img-fluid">
+              </div>
+              <div class="col-lg-6">
+                <div class="modal-header">
+                  <h5 class="modal-title">Connexion</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body futuristic-form">
+                  <div class="form-group">
+                    <label for="usernameInput" class="form-label">Nom d'utilisateur</label>
+                    <input id="usernameInput" type="text" class="form-control" placeholder="Nom d'utilisateur" />
+                  </div>
+                  <div id="signupPfpWrapper" class="form-group d-none">
+                    <label class="form-label">Photo de profil (optionnelle)</label>
+                    <div>
+                      <label for="signupPfpInput" class="pfp-chooser-btn mt-1" title="Ajouter une photo de profil">
+                        <span class="pfp-placeholder"><i class="fa-solid fa-upload"></i></span>
+                        <img id="signupPfpPreview" src="" alt="Prévisualisation" class="pfp-img d-none" />
+                      </label>
+                      <input id="signupPfpInput" type="file" class="d-none" accept="image/*" />
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="passwordInput" class="form-label">Mot de passe</label>
+                    <div class="input-group">
+                      <input id="passwordInput" type="password" class="form-control" placeholder="Entrez le mot de passe" />
+                      <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                        <i class="fa fa-eye"></i>
+                      </button>
+                    </div>
+                  </div>
+                  <div id="signupExtras" class="d-none">
+                    <div class="form-group">
+                      <label for="confirmPasswordInput" class="form-label">Confirmez le mot de passe</label>
+                      <div class="input-group">
+                        <input id="confirmPasswordInput" type="password" class="form-control" placeholder="Confirmez le mot de passe" />
+                        <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPassword">
+                          <i class="fa fa-eye"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                  <button id="loginSubmit" type="button" class="btn btn-primary">Connexion</button>
+                </div>
+              </div>
+            </div>
+        </div>        </div>
+    </div>
+
+    <!-- Signup uses the same modal as Login; handled in JS. -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
