--- a/Others/compta/index.html
+++ b/Others/compta/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="full" style="text-align:right">
+        <div class="full totalRow" style="text-align:right">
           <div class="small">Total</div>
           <div id="priceBig" style="font-size:26px;color:var(--accent);font-weight:800">0 €</div>
         </div>
