--- a/Others/compta/index.html
+++ b/Others/compta/index.html
@@ -170,6 +170,8 @@
 
   <div class="toast" role="status" aria-live="polite">&nbsp;</div>
 
+  <img id="siteLogo" src="images/axonis.png" alt="" loading="lazy" aria-hidden="true" />
+
   <script src="https://cdn.jsdelivr.net/npm/exceljs@4.3.0/dist/exceljs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
   <script src="app.js"></script>
