--- a/Others/compta/index.html
+++ b/Others/compta/index.html
@@ -25,6 +25,7 @@
     
     <form id="rowForm" autocomplete="off">
       <h1 id="formTitle">Nouvelle facture</h1>
+
       <div class="grid">
         <div style="display: flex; gap: 12px; align-items: end;">
           <div style="flex:1; display: flex; flex-direction: column; gap: 6px;">
@@ -121,7 +122,7 @@
     <div class="preview">
       <h2>Aperçu</h2>
       <div class="actions small">
-        <div style="margin-left:12px;display:flex;gap:8px;align-items:center">
+        <div style="display:flex;gap:8px;align-items:center">
           <button id="importCsvBtn" type="button" class="secondary">Importer XLSX</button>
           <button id="exportCsvBtn" type="button" class="secondary">Exporter XLSX</button>
           <button id="wipeBtn" type="button" class="secondary">Vider la table</button>
@@ -173,6 +174,8 @@
   <img id="siteLogo" src="images/axonis.png" alt="" loading="lazy" aria-hidden="true" />
 
   <script src="https://cdn.jsdelivr.net/npm/exceljs@4.3.0/dist/exceljs.min.js"></script>
+
+
   <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
   <script src="app.js"></script>
 </body>
