--- a/Others/compta/index.html
+++ b/Others/compta/index.html
@@ -73,9 +73,9 @@
             <label for="service_type">Type de séance <span class="requiredStar" aria-hidden="true">*</span></label>
             <select id="service_type" aria-label="Type de séance" required>
               <option value="" disabled selected>Sélectionner un type de séance…</option>
-              <option value="70">1 séance d'ostéopathie (45min) — 70€</option>
-              <option value="70">1 massage bien-être (60min) — 70€</option>
-              <option value="90">1 massage bien-être (90min) — 90€</option>
+              <option value="70">Séance d'ostéopathie (45min) — 70€</option>
+              <option value="70">Massage bien-être (60min) — 70€</option>
+              <option value="90">Massage bien-être (90min) — 90€</option>
               <option value="100">Pack gommage + massage — 100€</option>
               <option value="autre">Autre…</option>
             </select>
