--- a/Others/compta/index.html
+++ b/Others/compta/index.html
@@ -88,6 +88,8 @@
               <option value="Chèque">Chèque</option>
               <option value="Virement bancaire">Virement bancaire</option>
               <option value="Carte bancaire">Carte bancaire</option>
+              <option value="Wero">Wero</option>
+              <option value="SumUp">SumUp</option>
               <option value="Autre">Autre</option>
           </select>
           <label for="payment_method_other" style="margin-top:8px;display:none" id="payment_method_other_label">Précisez le mode de règlement <span style="font-weight:600;color:var(--muted);font-size:12px">(optionnel)</span></label>
