--- a/BlackGoose/index.html
+++ b/BlackGoose/index.html
@@ -13,7 +13,7 @@
     <header class="hero sticky-panel" aria-label="Présentation de la marque">
         <div class="hero-media" aria-hidden="true">
             <video class="hero-video" autoplay muted loop playsinline preload="metadata">
-                <source src="video/iconic2.mp4" type="video/mp4">
+                <source src="video/hero.mp4" type="video/mp4">
             </video>
             <div class="hero-scrim"></div>
         </div>
