--- a/index.html
+++ b/index.html
@@ -79,7 +79,22 @@
                         <div class="achievement-badge">Innovation</div>
                     </div>
                 </div>
-            </div>              <div class="achievement-item" data-achievement="participation">
+            </div>   
+                        
+            <div class="achievement-item" data-achievement="agile">
+                <div class="achievement-content">
+                    <div class="achievement-icon">
+                        <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
+                    </div>
+                    <div class="achievement-info">
+                        <h3 class="achievement-title">Professional Networking</h3>
+                        <p class="achievement-description">Up for Life 2024-2025</p>
+                        <div class="achievement-badge">Business</div>
+                    </div>
+                </div>
+            </div>     
+
+            <div class="achievement-item" data-achievement="participation">
                 <div class="achievement-content">
                     <div class="achievement-icon">
                         <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
@@ -91,6 +106,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </header>
