--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 <p>Digital Design • Programming • Unique Creations • 3D Modeling • Web Design • </p>
             </div>
         </div>
-    </div>    <div class="achievements">
+    </div>    
+    
+    <!-- Achievements Section -->
+    <div class="achievements">
         <div class="achievements-header">
             <h2 class="achievements-title">My Achievements</h2>
             <div class="achievements-subtitle">Excellence recognized by my peers</div>
@@ -79,22 +82,10 @@
                         <div class="achievement-badge">Innovation</div>
                     </div>
                 </div>
-            </div>   
-                        
-            <div class="achievement-item" data-achievement="agile">
-                <div class="achievement-content">
-                    <div class="achievement-icon">
-                        <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
-                    </div>
-                    <div class="achievement-info">
-                        <h3 class="achievement-title">Professional Networking</h3>
-                        <p class="achievement-description">Up for Life 2024-2025</p>
-                        <div class="achievement-badge">Business</div>
-                    </div>
-                </div>
             </div>     
 
-            <div class="achievement-item" data-achievement="participation">
+            <!-- UpForLife
+            <div class="achievement-item" data-achievement="upforlife">
                 <div class="achievement-content">
                     <div class="achievement-icon">
                         <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
@@ -106,10 +97,26 @@
                     </div>
                 </div>
             </div>
+            -->
 
+            <div class="achievement-item" data-achievement="agile">
+                <div class="achievement-content">
+                    <div class="achievement-icon">
+                        <img src="Elements/image/svg/at.svg" alt="Up for Life">
+                    </div>
+                    <div class="achievement-info">
+                        <h3 class="achievement-title">Professional Networking</h3>
+                        <p class="achievement-description">Agile Tour Sophia Antipolis 2025</p>
+                        <div class="achievement-badge">Business</div>
+                    </div>
+                </div>
+            </div>   
         </div>
     </div>
 </header>
+
+
+<!-- Infos Section -->
     <div id="infos" style="display:none;">
         <div class="infos-container">
             <div class="infos-content">
