--- a/index.html
+++ b/index.html
@@ -120,15 +120,23 @@
     <div id="infos" style="display:none;">
         <div class="infos-container">
             <div class="infos-content">
-                <h1>Who am I?</h1>
-                <h3 class="subtitle">Self-taught 3D designer and modeler with an adventurous spirit based in Cannes, France. <br><br> Passionate about digital design since the age of 10, I create projects with modern and minimalist styles, combining creativity and functionality. <br><br> Specialized in 3D modeling and web development, I bring a unique vision to each project. <br><br> From growing up in Southern France to living 5 years in Guadeloupe and 1 year in Thailand, this multicultural journey has shaped me into an adaptable, open-minded creative who thrives on cultural diversity and new challenges. <br><br> For new projects: <br><strong><a href="mailto:leotoskuepro@gmail.com">Leotoskuepro@gmail.com</a></strong></h3>
+                <h1>Who am I ?</h1>
+                <h2>Bio</h2>
+                <p class="description">Léo Tosku, <span class="age" data-dob="2007-10-31">—</span> years old, living in Cannes, France.<br> 
+                <p class="description"><br>Born in France, I spent part of my life in the Caribbean before returning to Cannes to pursue my studies. I am currently studying Graphic Design at Ynov Sophia Campus, working towards a Bachelor's degree in Digital Project Leadership (Chef de Projet Digital, RNCP 6).</p></p>
+                <p class="description"><br>Passionate about digital creation, I specialize myself in graphic design. I enjoy crafting unique experiences and universes that blend creativity and functionality.</p>
                 
-                <!-- Entreprises -->
-                <div class="companies-section">
-                    <h2>Companies that trusted me</h2>
-                    <div class="companies-logos">
-                        <!-- Companies will be loaded dynamically -->
+
+                <div class="experience-section">
+                    <h2>Experiences</h2>
+                    <div class="experience-list">
+                        <!-- Populated automatically from companies.json -->
                     </div>
+                </div>
+
+                <div class="interests-section">
+                    <h2>Interests</h2>
+                    <p>Creative development • Open source • 3D development • Finance</p>
                 </div>
             </div>
             
